syntax = "proto3";

package task;

option go_package = "services/task/proto";

service TaskService {
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
    rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string user_id = 4;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string user_id = 3;
}

message CreateTaskResponse {
    Task task = 1;
}

message GetTaskRequest {
    string id = 1;
}

message GetTaskResponse {
    Task task = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {
    bool success = 1;
}
