syntax = "proto3";

package user;

import "google/api/annotations.proto";

option go_package = "services/user/proto";


service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    }
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/v1/users/{id}"
        };
    }
    rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}